<resources>
    <string name="app_name">NoteApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convenience">Удобства</string>
    <string name="notes">Notes</string>
    <string name="organization">Организация</string>
    <string name="sinchronization">Синхронизация</string>
    <string name="desc_one">\tСоздайте заметку в два клика !Записывайте мысли, идеи и важные задачи многовенно.</string>
    <string name="desc_two">Организуйте заметки по папкам и тегам. Легко находите нужную информацию в любое время.</string>
    <string name="desc_three">Синхронизация на всех устройствах. Доступ к записям в любое время и в любом месте.</string>
    <string name="note_home">Note_Home</string>
    <string name="secondfragment">secondfragment</string>
    <string name="skip">Пропустить</string>
    <string name="start">Начать</string>
    <string name="enter_magic_word">Введите волшебное слово:</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="hello">Hello</string>
    <string name="find_note">Поиск заметок</string>
    <string name="note">Заметки</string>
    <string name="ok">Готово</string>
    <string name="need_do">Нужно сделать:</string>
    <string name="thrity">30 мая</string>
    <string name="delete_this_note">Удалить заметку?</string>
    <string name="enter_text">Введите текст:</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Выход</string>
    <string name="deleteNote">Удалить заметку?</string>
    <string name="hello_my">Hello</string>
    <string name="enter_text_ed">Enter text</string>
    <string name="saves">Save</string>
    <string name="time">17:21</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="web_cliet_id">192415594325-73j2vhhim3k25nq76mbhlmqmkv9uu1aj.apps.googleusercontent.com</string>
    <string name="notesss">Notes</string>
    <string name="notif_channel_id">com.example.noteapp.ui.activity</string>
</resources>