<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_gray"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.fragment.note.NoteDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_time_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/thrity"
            android:textColor="@color/data_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/time"
            android:textColor="@color/data_gray"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btn_add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/black_gray"
            android:text="@string/ok"
            android:textColor="@color/orange_btn"
            android:visibility="invisible" />
    </LinearLayout>


    <EditText
        android:id="@+id/titleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/need_do"
        android:textColor="@color/black_text"
        android:textColorHint="@color/black_text" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:textColor="@color/black_text"
        android:textColorHint="@color/et_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gray"
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:backgroundTint="@color/btn_gray"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_white"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            app:backgroundTint="@color/btn_white"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_red"
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:backgroundTint="@color/btn_red"
            app:cornerRadius="12dp" />

    </LinearLayout>

</LinearLayout>
